--- a/webapp/templates/championship.html
+++ b/webapp/templates/championship.html
@@ -31,9 +31,11 @@
         <td>{{ item.driver }}</td>
         {% for item in item.rounds %}
         {% if item.dropped %}
-        <td class="red">{{ item.points }}</td>
-        {% else %}
+        <td class="dropped_points">{{ item.points }}</td>
+        {% elif item.exists %}
         <td>{{ item.points }}</td>
+        {% else %}
+        <td>-</td>
         {% endif %}
         {% endfor %}
         <td>{{ item.dropped_points }}</td>
