--- a/webapp/templates/admin.html
+++ b/webapp/templates/admin.html
@@ -11,13 +11,14 @@
 
         <div class="row">
             <div class="col-6 col-sm-6 col-lg-12">
-                <h2>Rounds ({{ selected_season }})</h2>
+                <h2>All rounds ({{ selected_season }})</h2>
 
                 <table class="table">
                     <thead>
                         <tr>
                             <th>#</th>
                             <th>Data</th>
+                            <th class="text-center">Status</th>
                             <th class="text-center">Action</th>
                             <th class="text-center">Points</th>
                         </tr>
@@ -29,10 +30,17 @@
                             <td>{{ round_obj.get_num() }}</td>
                             <td>
                                 {% if round_obj.exists() %}
-                                    <span class="label label-success">Downloaded</span>
+                                    <span class="label label-success">OK</span>
                                     <a class="label label-primary" href="{{ round_obj.get_mylaps_url_web() }}">{{ round_obj.get_mylaps_url_web() }}</a>
                                 {% else %}
                                     <span class="label label-default">Not downloaded</span>
+                                {% endif %}
+                            </td>
+                            <td class="text-center">
+                                {% if round_obj.is_approved() %}
+                                    <span class="label label-success">Approved</span>
+                                {% elif round_obj.exists() %}
+                                    <span class="label label-warning">Not approved ({{ round_obj.count_approved_sessions() }}/{{ round_obj.count_total_sessions() }})</span>
                                 {% endif %}
                             </td>
                             <td class="text-center">
@@ -48,8 +56,8 @@
                             </td>
                             <td class="text-center">
                                 {% if round_obj.exists() %}
-                                    <a href="/" class="link-adjust-points">
-                                        <span class="glyphicon glyphicon-edit" data-toggle="tooltip" data-placement="right" title="Adjust points manually"></span>
+                                    <a href="{{ url_for('admin_round_points', selected_season=selected_season, selected_round=round_obj.get_num()) }}" class="link-adjust-points">
+                                        <span class="glyphicon glyphicon-edit" data-toggle="tooltip" data-placement="right" title="Approve & adjust points"></span>
                                     </a>
                                 {% endif %}
                             </td>
