--- a/webapp/templates/admin_round_points.html
+++ b/webapp/templates/admin_round_points.html
@@ -16,8 +16,7 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Type</th>
-                            <th class="text-center">Id</th>
+                            <th>Session</th>
                             <th class="text-center">Status</th>
                             <th class="text-center">Action</th>
                             <th class="text-center">Points</th>
@@ -28,8 +27,7 @@
                         {% for stype, session_list in round_obj.get_sessions_by_type().iteritems() %}
                         {% for session_obj in session_list %}
                         <tr>
-                            <td>{{ session_obj.get_type() }}</td>
-                            <td class="text-center"> {% if session_obj.get_id() %}{{ session_obj.get_id() }}{% else %} - {% endif %}</td>
+                            <td>{{ session_obj.get_name() }}</td>
                             <td class="text-center">
                                 {% if session_obj.is_approved() %}
                                     <span class="label label-success">Approved</span>
