--- a/webapp/templates/admin_session_points.html
+++ b/webapp/templates/admin_session_points.html
@@ -25,12 +25,13 @@
                             <th class="text-center">Laps</th>
                             <th class="text-center">Points</th>
                             <th class="text-center">Action</th>
+                            <th class="text-center">Adjustments</th>
                         </tr>
                     </thead>
 
                     <tbody>
                         {% for item in session_obj.data %}
-                        <tr>
+                        <tr {% if session_obj.point_adjustments[item.driver_name_canonical] %}class="point_adjustments"{% endif %}>
                             <td>{{ item.pos }}</td>
                             <td class="text-center">{{ item.kart }}</td>
                             <td class="text-center">{{ item.driver_name }}</td>
@@ -45,11 +46,18 @@
                                       Edit <span class="caret"></span>
                                   </button>
                                   <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Move up/down (position)</a></li>
+                                    <li><a href="#" class="adjust-points-change-position">Move up/down (position)</a></li>
                                     <li><a href="#">Add/subtract points</a></li>
-                                    <li><a href="#">Reset adjustments</a></li>
+                                    <li><a href="#" class="adjust-points-clear">Reset adjustments</a></li>
                                   </ul>
                                 </div>
+                            </td>
+                            <td class="text-center">
+                                {% if session_obj.point_adjustments[item.driver_name_canonical] %}
+                                    (Description)
+                                {% else %}
+                                    -
+                                {% endif %}
                             </td>
                         </tr>
                         {% endfor %}
@@ -63,6 +71,86 @@
 </div><!--/row-->
 
 <script>
+
+    $(function(){
+        $('.adjust-points-change-position').on('click', function(e){
+            e.preventDefault(); // preventing default click action
+
+            var driver_name = $(this).parent().parent().parent().parent().parent().children()[2].innerHTML;
+            var action_cell = $(this).parent().parent().parent().parent().parent().children()[8];
+
+            bootbox.dialog({
+                message: "<form id='adjust-points-change-position-form'>Move <b>" + driver_name + "</b> <select name='move_type'><option value='up'>Up</option><option value='down'>Down</option></select> by <input type='text' name='positions' style='width: 40px; text-align: center'/> positions</form>",
+                title: "Change driver position",
+                buttons: {
+                    cancel: {
+                        label: "Cancel",
+                        className: "btn-default",
+                        callback: function() {
+                        }
+                    },
+                    save: {
+                        label: "Save",
+                        className: "btn-primary",
+                        callback: function() {
+                            var move_type = $('#adjust-points-change-position-form').find('select[name=move_type]').val();
+                            var positions = $('#adjust-points-change-position-form').find('input[name=positions]').val();
+
+                            action_cell.innerHTML = '<div class="progress progress-striped active"><div class="progress-bar progress-bar-warning" role="progressbar " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Working...</div></div>';
+
+                            $.ajax({
+                                type: 'post',
+                                url: '{{ url_for('admin_session_points', selected_season=selected_season, selected_round=selected_round) }}',
+                                data: { action: 'adjust_driver_position', session_name: '{{ session_obj.get_name() }}', driver_name: driver_name, move_type: move_type, positions: positions },
+                                success: function() {
+                                    location.reload();
+                                },
+                                error: function() {
+                                    alert('Failed to change driver position');
+                                    location.reload();
+                                }
+                            })
+
+                        }
+                    }
+                }
+            });
+
+        })
+    })
+
+    $(function(){
+        $('.adjust-points-clear').on('click', function(e){
+            e.preventDefault(); // preventing default click action
+
+            var driver_name = $(this).parent().parent().parent().parent().parent().children()[2].innerHTML;
+            var action_cell = $(this).parent().parent().parent().parent().parent().children()[8];
+
+            bootbox.confirm("Are you sure you want to clear point adjustments for <b>" + driver_name + "</b>", function(result) {
+                if (result) {
+                    // trying to start deletion
+                    action_cell.innerHTML = '<div class="progress progress-striped active"><div class="progress-bar progress-bar-warning" role="progressbar " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Working...</div></div>';
+
+                    $.ajax({
+                        type: 'post',
+                        url: '{{ url_for('admin_session_points', selected_season=selected_season, selected_round=selected_round) }}',
+                        data: { action: 'clear_driver_adjustments', session_name: '{{ session_obj.get_name() }}', driver_name: driver_name },
+                        success: function() {
+                            location.reload();
+                        },
+                        error: function() {
+                            alert('Failed to clear point adjustments for the driver');
+                            location.reload();
+                        }
+                    })
+              }
+
+            });
+
+        })
+    })
+
+
 </script>
 
 {% endblock %}
