--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -56,16 +56,13 @@
             {% endif %}
         </div>
 
-        <!--
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+        {% if admin %}
+        <div class="navbar-collapse navbar-right collapse">
+          <form class="navbar-form navbar-right" role="form">
+            <a href="{{ url_for('logout') }}" class="btn btn-info">Logout: {{ current_user.username }}</a>
+          </form>
         </div>
-        -->
-
+        {% endif %}
     </div>
 </div>
 
