--- a/webapp/templates/championship.html
+++ b/webapp/templates/championship.html
@@ -11,6 +11,10 @@
         Championship</h1>
 </div>
 
+{% if not season_data.is_approved() %}
+    <div class="alert alert-warning" role="alert"><b>The results are not official yet!</b> The last round is pending approval. This message will disappear once the results get approved by the race director.</div>
+{% endif %}
+
 <table class="table table-striped">
     <thead>
     <tr>
