--- a/webapp/templates/admin_session_points.html
+++ b/webapp/templates/admin_session_points.html
@@ -61,7 +61,19 @@
                             </td>
                             <td class="text-center">
                                 {% if session_obj.point_adjustments[item.driver_name_canonical] %}
-                                    (Description)
+
+                                    {% for adjustment in session_obj.point_adjustments[item.driver_name_canonical] %}
+
+                                    {% if adjustment.type == 'adjust_points' %}
+                                        Set points for the session to {{ adjustment.points }}
+                                    {% elif adjustment.type == 'adjust_position' %}
+                                        Move {% if adjustment.positions < 0 %}up{% else %}down{% endif %} by {{ adjustment.positions|abs }} position(s)
+                                    {% else %}
+                                        Non-droppable round
+                                    {% endif %}
+                                        <br>Reason: {% if adjustment.reason %}{{ adjustment.reason }}{% else %}-{% endif %}
+                                    {% endfor %}
+
                                 {% else %}
                                     -
                                 {% endif %}
@@ -87,7 +99,7 @@
             var action_cell = $(this).parent().parent().parent().parent().parent().children()[9];
 
             bootbox.dialog({
-                message: "<form id='adjust-points-change-position-form'>Move <b>" + driver_name + "</b> <select name='move_type'><option value='up'>Up</option><option value='down'>Down</option></select> by <input type='text' name='positions' style='width: 40px; text-align: center'/> positions</form>",
+                message: "<form id='adjust-points-change-position-form'>Move <b>" + driver_name + "</b> <select name='move_type'><option value='up'>Up</option><option value='down'>Down</option></select> by <input type='text' name='positions' style='width: 40px; text-align: center'/> positions<br>Reason: <input type='text' name='reason' style='width: 80%'/></form>",
                 title: "Change driver position",
                 buttons: {
                     cancel: {
@@ -102,13 +114,14 @@
                         callback: function() {
                             var move_type = $('#adjust-points-change-position-form').find('select[name=move_type]').val();
                             var positions = $('#adjust-points-change-position-form').find('input[name=positions]').val();
+                            var reason = $('#adjust-points-change-position-form').find('input[name=reason]').val();
 
                             action_cell.innerHTML = '<div class="progress progress-striped active"><div class="progress-bar progress-bar-warning" role="progressbar " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Working...</div></div>';
 
                             $.ajax({
                                 type: 'post',
                                 url: '{{ url_for('admin_session_points', selected_season=selected_season, selected_round=selected_round) }}',
-                                data: { action: 'adjust_driver_position', session_name: '{{ session_obj.get_name() }}', driver_name: driver_name, move_type: move_type, positions: positions },
+                                data: { action: 'adjust_driver_position', session_name: '{{ session_obj.get_name() }}', driver_name: driver_name, move_type: move_type, positions: positions, reason: reason },
                                 success: function() {
                                     location.reload();
                                 },
@@ -136,7 +149,7 @@
             var action_cell = $(this).parent().parent().parent().parent().parent().children()[9];
 
             bootbox.dialog({
-                message: "<form id='adjust-points-explicit-points-form'>Change points for <b>" + driver_name + "</b> from <b>" + existing_points + "</b> points to <input type='text' name='points' style='width: 40px; text-align: center'/> points</form>",
+                message: "<form id='adjust-points-explicit-points-form'>Change points for <b>" + driver_name + "</b> from <b>" + existing_points + "</b> points to <input type='text' name='points' style='width: 40px; text-align: center'/> points<br>Reason: <input type='text' name='reason' style='width: 80%'/></form>",
                 title: "Change driver points",
                 buttons: {
                     cancel: {
@@ -150,13 +163,14 @@
                         className: "btn-primary",
                         callback: function() {
                             var points = $('#adjust-points-explicit-points-form').find('input[name=points]').val();
+                            var reason = $('#adjust-points-explicit-points-form').find('input[name=reason]').val();
 
                             action_cell.innerHTML = '<div class="progress progress-striped active"><div class="progress-bar progress-bar-warning" role="progressbar " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Working...</div></div>';
 
                             $.ajax({
                                 type: 'post',
                                 url: '{{ url_for('admin_session_points', selected_season=selected_season, selected_round=selected_round) }}',
-                                data: { action: 'adjust_driver_points', session_name: '{{ session_obj.get_name() }}', driver_name: driver_name, points: points },
+                                data: { action: 'adjust_driver_points', session_name: '{{ session_obj.get_name() }}', driver_name: driver_name, points: points, reason: reason },
                                 success: function() {
                                     location.reload();
                                 },
@@ -182,15 +196,17 @@
             var driver_name = $(this).parent().parent().parent().parent().parent().children()[3].innerHTML;
             var action_cell = $(this).parent().parent().parent().parent().parent().children()[9];
 
-            bootbox.confirm("Are you sure you want to mark this event for <b>" + driver_name + "</b> as <b>non-droppable</b>?", function(result) {
+            bootbox.confirm("Mark event as <b>non-droppable</b> for <b>" + driver_name + "</b>. Reason: <form id='non-droppable-form'><input type='text' name='reason' style='width: 80%'/></form>", function(result) {
                 if (result) {
+                    var reason = $('#non-droppable-form').find('input[name=reason]').val();
+
                     // trying to start deletion
                     action_cell.innerHTML = '<div class="progress progress-striped active"><div class="progress-bar progress-bar-warning" role="progressbar " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Working...</div></div>';
 
                     $.ajax({
                         type: 'post',
                         url: '{{ url_for('admin_session_points', selected_season=selected_season, selected_round=selected_round) }}',
-                        data: { action: 'mark_non_droppable', session_name: '{{ session_obj.get_name() }}', driver_name: driver_name },
+                        data: { action: 'mark_non_droppable', session_name: '{{ session_obj.get_name() }}', driver_name: driver_name, reason: reason },
                         success: function() {
                             location.reload();
                         },
