--- a/webapp/templates/championship_teams.html
+++ b/webapp/templates/championship_teams.html
@@ -10,6 +10,10 @@
     <h1>CalSpeed Super Series {{ selected_season }}: Team Championship</h1>
 </div>
 
+{% if not season_data.is_approved() %}
+    <div class="alert alert-warning" role="alert"><b>The results are not official yet!</b> The last round is pending approval. This message will disappear once the results get approved by the race director.</div>
+{% endif %}
+
 <table class="table">
     <thead>
     <tr>
