implemented points diff & pos gained since last round (Closes #25) (Closes #26)

--- a/webapp/static/main.css
+++ b/webapp/static/main.css
@@ -19,3 +19,11 @@
 .menu-item {
   min-height: 157px;
 }
+
+.glyphicon-chevron-up {
+  color: #279100;
+}
+
+.glyphicon-chevron-down {
+  color: #FC5421;
+}
