--- a/webapp/templates/championship_teams.html
+++ b/webapp/templates/championship_teams.html
@@ -2,8 +2,7 @@
 {% block body %}
 
 <div class="row">
-    <p><a class="btn btn-primary" href="{{ url_for('season_overview', selected_season=selected_season) }}"
-          role="button">&laquo; Back to home page</a></p>
+    <p><a class="btn btn-primary" href="javascript:history.back()" role="button">&laquo; Back to home page</a></p>
 </div>
 
 <div class="row">
